# GLIP

./: .gitignore  .pre-commit-config.yaml  DATA.md  INSTALL.md  README.md  fine-tune_coco.sh  fine-tune_debug.sh  fine-tune_flickr_ja.sh  fine-tune_jcre3.sh  fine-tune_jcre3_flickr_ja.sh  fine-tune_original.sh  pyproject.toml  run_fine-tuning.sh  setup.py
configs/finetune/: flickr_ja_mixed.yaml  glip_Swin_T_GoldG.yaml  glip_Swin_T_O365_GoldG_flickr-ja.yaml  glip_Swin_T_O365_GoldG_jcre3.yaml  jcre3.yaml  jcre3_flickr_ja.yaml
configs/flickr/: test.yaml  train.yaml  val.yaml
configs/flickr_ja/: test.yaml  train.yaml  val.yaml
configs/jcre3/: test.yaml  train.yaml  val.yaml
configs/lvis/: val.yaml
configs/odinw_35/: _all.json
configs/pretrain/: _coco.yaml  glip_Swin_T_O365.yaml  glip_Swin_T_O365_GoldG.yaml
knowledge/: odinw_knowledge_with_prompt.yaml  run_inference_odinw_knowledge_benchmark35.yaml
maskrcnn_benchmark/config/: __init__.py  defaults.py  paths_catalog.py
maskrcnn_benchmark/csrc/: ROIAlign.h  ROIPool.h  SigmoidFocalLoss.h  deform_conv.h  deform_pool.h  nms.h
maskrcnn_benchmark/csrc/cpu/: nms_cpu.cpp  soft_nms.cpp  vision.h
maskrcnn_benchmark/csrc/cuda/: ROIAlign_cuda.cu  ROIPool_cuda.cu  SigmoidFocalLoss_cuda.cu  deform_conv_cuda.cu  deform_conv_kernel_cuda.cu  deform_pool_cuda.cu  deform_pool_kernel_cuda.cu  ml_nms.cu  nms.cu  vision.h
maskrcnn_benchmark/data/: build.py  collate_batch.py
maskrcnn_benchmark/data/datasets/: __init__.py  background.py  box_label_loader.py  caption.py  coco.py  coco_dt.py  custom_distributed_sampler.py  duplicate_dataset.py  flickr.py  gqa.py  imagenet.py  list_dataset.py  lvis.py  mixed.py  mixup.py  modulated_coco.py  object365.py  od_to_grounding.py  phrasecut.py  pseudo_data.py  refexp.py  tsv.py  vg.py  voc.py
maskrcnn_benchmark/data/datasets/evaluation/: __init__.py  box_aug.py
maskrcnn_benchmark/data/datasets/evaluation/coco/: coco_eval.py
maskrcnn_benchmark/data/datasets/evaluation/flickr/: flickr_eval.py
maskrcnn_benchmark/data/datasets/evaluation/lvis/: lvis.py  lvis_eval.py
maskrcnn_benchmark/data/datasets/evaluation/od_to_grounding/: od_eval.py
maskrcnn_benchmark/data/datasets/evaluation/vg/: vg_eval.py
maskrcnn_benchmark/data/datasets/evaluation/voc/: voc_eval.py
maskrcnn_benchmark/data/samplers/: distributed.py  grouped_batch_sampler.py
maskrcnn_benchmark/data/transforms/: __init__.py  transforms.py
maskrcnn_benchmark/engine/: alter_trainer.py  evolution.py  inference.py  predictor.py  predictor_glip.py  singlepath_trainer.py  stage_trainer.py  trainer.py
maskrcnn_benchmark/layers/: __init__.py  batch_norm.py  deform_conv.py  deform_pool.py  dropblock.py  dyhead.py  dyrelu.py  evonorm.py  iou_loss.py  misc.py  roi_align.py  roi_pool.py  se.py  set_loss.py  sigmoid_focal_loss.py
maskrcnn_benchmark/modeling/: balanced_positive_negative_sampler.py  box_coder.py  make_layers.py  matcher.py  poolers.py
maskrcnn_benchmark/modeling/backbone/: __init__.py  bifpn.py  blocks.py  efficientdet.py  efficientnet.py  fbnet.py  fpn.py  mixer.py  ops.py  resnet.py  swint.py  swint_v2.py  swint_v2_vl.py  swint_vl.py
maskrcnn_benchmark/modeling/detector/: __init__.py  generalized_rcnn.py  generalized_vl_rcnn.py
maskrcnn_benchmark/modeling/language_backbone/: __init__.py  backbone.py  bert_model.py  clip_model.py  hfpt_tokenizer.py  rnn_model.py  simple_tokenizer.py  test_clip_tokenizer.py  word_utils.py
maskrcnn_benchmark/modeling/roi_heads/: __init__.py
maskrcnn_benchmark/modeling/roi_heads/box_head/: box_head.py  inference.py  loss.py  roi_box_feature_extractors.py  roi_box_predictors.py
maskrcnn_benchmark/modeling/roi_heads/keypoint_head/: inference.py  keypoint_head.py  loss.py  roi_keypoint_feature_extractors.py  roi_keypoint_predictors.py
maskrcnn_benchmark/modeling/roi_heads/mask_head/: hourglass.py  inference.py  loss.py  mask_head.py  roi_mask_feature_extractors.py  roi_mask_predictors.py
maskrcnn_benchmark/modeling/rpn/: __init__.py  anchor_generator.py  atss.py  dyhead.py  fcos.py  inference.py  loss.py  modeling_bert.py  retina.py  rpn.py  transformer.py  vldyhead.py
maskrcnn_benchmark/solver/: __init__.py  build.py  lr_scheduler.py
maskrcnn_benchmark/structures/: bounding_box.py  boxlist_ops.py  image_list.py  keypoint.py  segmentation_mask.py
maskrcnn_benchmark/utils/: amp.py  big_model_loading.py  c2_model_loading.py  checkpoint.py  collect_env.py  comm.py  dist.py  ema.py  flops.py  fuse_helper.py  imports.py  mdetr_dist.py  metric_logger.py  miscellaneous.py  model_serialization.py  model_zoo.py  pretrain_model_loading.py  registry.py  shallow_contrastive_loss_helper.py  stats.py
odinw/: download.py
tools/: chunk_aligner.py  eval_all.py  finetune.py  run_glip.py  run_glip_video.py  test_grounding_net.py  test_net.py  train_net.py  util.py  visualize_grounding_net.py
tools/cityscapes/: convert_cityscapes_to_coco.py  instances2dict_with_polygons.py
